# TileDB-Vector-Search

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md  _quarto.yml  environment.yml  pyproject.toml
apis/python/: CMakeLists.txt  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements-py.txt  setup.py  test.py
apis/python/test/: array_paths.py  common.py  conftest.py  local-benchmarks.py  test_api.py  test_backwards_compatability.py  test_backwards_compatibility.py  test_cloud.py  test_crash.py  test_directory_reader.py  test_distance_metrics.py  test_filtered_vamana.py  test_index.py  test_ingestion.py  test_module.py  test_module2.py  test_object_index.py  test_scale.py  test_type_erased_module.py  test_utils.py
experimental/: CMakeLists.txt  GLOSSARY.md
experimental/benchmarks/: 1b.bash  instance_runner.bash  local.bash  proto.bash  sanity.bash  setup.bash
experimental/cmake/: BLAS.cmake  FindTileDB_EP.cmake  Superbuild.cmake
experimental/cmake/Modules/: FindTileDB_EP.cmake  TileDBCommon.cmake
experimental/experiments/: Array URIs.txt  flat-shakedown.bash  flat-timing.bash  ivf-shakedown.bash  method-shakedown.bash
experimental/include/: algorithm.h  api_sketch.h  array_types.h  array_view.h  choose_blas.h  concepts.h  config.h.in  defs.h  feature_vector.h  fixed_min_queues.h  flat_query.h  ivf_index.h  ivf_query.h  linalg.h  partitioned.h  readers.h  scoring.h  sift_db.h  stats.h  tdb_partitioned_matrix.h
experimental/include/test/: CMakeLists.txt  arrays  gen_partitioned.cc  gen_queries.cc  time_insert.cc  time_l2.cc  time_open.cc  time_queries.cc  unit_algorithm.cc  unit_concepts.cc  unit_defs.cc  unit_gemm.cc  unit_ivf_index.cc  unit_linalg.cc  unit_logging.cc  unit_mdspan.cc  unit_partitioned.cc  unit_queries.cc  unit_sift_array.cc  unit_slicing.cc  unit_stats.cc  unit_utils.cc
experimental/include/utils/: logging.h  timer.h
experimental/python/: CMakeLists.txt  README.md  ingest_eg.ipynb  module.cc  pyproject.toml
experimental/python/tiledbvspy/: CMakeLists.txt  module.cc
experimental/python/vector_search/: module.cc
experimental/scripts/: build-ivf_hack.bash  build-libtiledb.bash  env.bash  flat-sanity.bash  init.bash  test-flat.bash  test.bash
experimental/src/: CMakeLists.txt  README.md  algorithm.h  api_sketch.h  array_view.h  concepts.h  config.h.in  defs.h  feature_vector.h  fixed_min_queues.h  flat.cc  flat_query.h  index.cc  ingest.cc  ivf_hack.cc  ivf_index.h  ivf_query.h  linalg.h  print_types.h  query.h  readers.h  scoring.h  scrap.cc  sift_array.h  sift_db.h  sparse.h  stats.h  timer.h  trash.cc  utils.h
experimental/src/test/: CMakeLists.txt  time_insert.cc  unit_algorithm.cc  unit_concepts.cc  unit_defs.cc  unit_ivf_index.cc  unit_ivf_query.cc  unit_linalg.cc  unit_mdspan.cc  unit_sift_db.cc  unit_stats.cc  unit_utils.cc
src/: CMakeLists.txt  README.md  algorithm.h  config.h  defs.h  flat.cc  flat.cpp  flat_query.h  ingest.cpp  query.h  sift_array.h  sift_db.h  timer.h
src/benchmarks/: 1b-c6a-16x-125MiB.bash  1b-c6a.bash  README.md  ann-benchmarks.py  awsrc.bash  instance_runner.bash  ivf_flat_full.bash  local.bash  log_postprocessing.py  new_setup.bash  proto.bash  sanity.bash  setup.bash
src/benchmarks/ivf/: ivf_index.bash  ivf_index_all.bash  ivf_init.bash  ivf_query.bash
src/benchmarks/pq/: flat_l2.bash  flatpq.bash
src/benchmarks/vamana/: diskann.bash  vamana.bash
src/cmake/: .Superbuild.cmake.swo  BLAS.cmake  Catch2.cmake  CompilerFlags.cmake  HighFive.cmake  Superbuild.cmake  config.cmake  logging.cmake  mdspan.cmake  nlohmann_json.cmake  tmpdir.cmake
src/cmake/Modules/: DownloadPrebuiltTileDB.cmake  FindClangTools.cmake  FindTileDB_EP.cmake  Sanitizer.cmake  TileDBCommon.cmake
src/experiments/: FlatCanon.txt  flat-shakedown.bash  method-shakedown-ec2.bash
src/include/: algorithm.h  api.h  array_view.h  choose_blas.h  concepts.h  config.h.in  cpos.h  defs.h  execution_policy.h  feature_vector.h  fixed_min_queues.h  flat_index.h  flat_query.h  flatpq_index.h  functional.h  index.h  index_defs.h  ivf_index.h  ivf_query.h  legacy_concepts.h  linalg.h  old_concepts.h  partitioned.h  proto_api.h  scoring.h  stats.h  tdb_defs.h  tdb_partitioned_matrix.h  vector_array.h
src/include/api/: README.md  api_defs.h  feature_vector.h  feature_vector_array.h  flat_l2_index.h  flat_pq_index.h  ivf_flat_index.h  ivf_pq_index.h  vamana_index.h
src/include/index/: README.md  flat_l2_group.h  flat_l2_index.h  flat_l2_metadata.h  flat_pq_group.h  flat_pq_index.h  flat_pq_metadata.h  flatpq_index.h  index_defs.h  index_group.h  index_metadata.h  ivf_flat_group.h  ivf_flat_index.h  ivf_flat_metadata.h  ivf_pq_group.h  ivf_pq_index.h  ivf_pq_metadata.h  kmeans.h  unit_json.cc  vamana_group.h  vamana_index.h  vamana_metadata.h
src/include/test/: CMakeLists.txt  array_defs.h  demo_concepts.cc  demo_cytoscape.cc  demo_high_five.cc  demo_matplot.cc  demo_nn-descent.cc  demo_nn-graph.cc  demo_vamana.cc  gen_graphs.h  gen_partitioned.cc  gen_queries.cc  query_common.h  shakedown.bash  test_utils.h  time_abstraction_penalty.cc  time_insert.cc  time_l2.cc  time_open.cc  time_queries.cc  time_scoring.cc  unit_adj_list.cc  unit_algorithm.cc  unit_api.cc  unit_api_feature_vector.cc  unit_api_feature_vector_array.cc  unit_api_flat_l2_index.cc  unit_api_flat_pq_index.cc  unit_api_ivf_flat_index.cc  unit_api_ivf_pq_index.cc  unit_api_vamana_index.cc  unit_array_defs.cc  unit_backwards_compatibility.cc  unit_best_first.cc  unit_compat.cc  unit_concepts.cc  unit_concepts_vs.cc  unit_coo.cc  unit_cpos.cc  unit_csr.cc  (+72 more)
src/include/utils/: filesystem.h  fixed_min_heap.h  fixed_min_queues.h  logging.h  (+14 more)
src/python/: ingest_eg.ipynb
src/scripts/: build-libtiledb.bash  dryrun.bash  env.bash  print_schema.bash  write.bash
src/src/: CMakeLists.txt  README.md  flat.cc  flat_l2.cc  index.cc  ingest.cc  ivf_flat.cc  ivf_hack.cc  ivf_index.cc  kmeans.cc  vamana.cc
src/test/: CMakeLists.txt  unit_algorithm.cc  unit_defs.cpp  unit_gemm.cpp  unit_sift_array.cpp  unit_sift_db.cpp
(+1812 files in other folders)
