[project]
name = "tiledb-vector-search"
description = "TileDB Vector Search Python client"
readme = "./README.md"
dynamic = ["version"]

dependencies = [
    "tiledb-cloud>=0.10.5",
    "tiledb>=0.15.2",
]

[project.urls]
homepage = "https://tiledb.com"
repository = "https://github.com/TileDB-Inc/feature-vector-prototype"


[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm>=6"]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
root = "../.."
write_to = "apis/python/src/tiledb/vector_search/version.py"

[tool.ruff]
extend-select = ["I"]

[tool.ruff.isort]
known-first-party = ["tiledb"]
force-single-line = true
single-line-exclusions = ["typing", "typing_extensions"]