[project]
name = "tiledb-vector-search"
version = "0.0.9"
#dynamic = ["version"]
description = "TileDB Vector Search Python client"
license = { text = "MIT" }
readme = "README.md"
authors = []
requires-python = "~=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
    "tiledb-cloud>=0.10.5",
    "tiledb>=0.15.2",
    "typing-extensions", # for tiledb-cloud indirect, x-ref https://github.com/TileDB-Inc/TileDB-Cloud-Py/pull/428
    "scikit-learn",
]

[project.optional-dependencies]
test = ["pytest"]


[project.urls]
homepage = "https://tiledb.com"
repository = "https://github.com/TileDB-Inc/tiledb-vector-search"

[build-system]
requires = [
    "setuptools>=42", "wheel", "setuptools_scm[toml]>=6",
    "scikit-build>=0.13", "pybind11[global]>=2.10",
    "cmake"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
#packages = ["tiledb.vector_search"]

[tool.setuptools_scm]
root = "../.."
#write_to = "apis/python/src/tiledb/vector_search/version.py"

[tool.ruff]
extend-select = ["I"]

[tool.ruff.isort]
known-first-party = ["tiledb"]
force-single-line = true
single-line-exclusions = ["typing", "typing_extensions"]

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
